# cram_ros2

./: README.md  important.txt  simple_arduino_interface.py  stripped_thin_strip.gcode  test.txt  thin_strip.gcode
action_interfaces/: CMakeLists.txt  package.xml
arduino_interface/: package.xml  setup.py
arduino_interface/arduino_interface/: serial_srv.py
cram_interfaces/: CMakeLists.txt  package.xml
cram_interfaces/action/: GCodeCommand.action
cram_ros2/: CMakeLists.txt  package.xml
dual_ur_description/urdf/: dual_ur.urdf.xacro  ur.urdf.xacro
dual_ur_desription/: package.xml
dual_ur_desription/config/: initial_positions.yaml
dual_ur_desription/launch/: view_ur.launch.py
dual_ur_desription/meshes/ur3/: bench_simplified_corrected.stl
dual_ur_desription/rviz/: view_robot.rviz
dual_ur_desription/urdf/: ur.urdf.xacro  ur_macro.xacro
dual_ur_robot_driver/: CMakeLists.txt  package.xml
dual_ur_robot_driver/config/: arm_0_ur_controllers.yaml  arm_1_ur_controllers.yaml  left_ur_controllers.yaml  right_ur_controllers.yaml  ur3_update_rate.yaml
dual_ur_robot_driver/launch/: dual_ur_control.launch.py  ur_control.launch.py
interfaces/: CMakeLists.txt  package.xml
interfaces/srv/: ArduinoCommand.srv
planner/: CMakeLists.txt  package.xml  setup.py
planner/launch/: planner_launch.py
planner/planner/: moveit_action_server.py  moveit_line.py
planner/src/: advanced_planner.cpp  calc_vel.cpp  client.cpp  listen.cpp  planner.cpp  planner_pilz.cpp  test_sync.cpp
ur_description/config/: initial_positions.yaml
ur_description/config/ur3/: joint_limits.yaml  visual_parameters.yaml
ur_description/launch/: view_dual_ur.launch.py  view_ur.launch.py
ur_description/meshes/ur3/: bench_simplified.stl  j6_link.STL
ur_description/urdf/: dual_ur.urdf.xacro  ur.urdf.xacro  ur_macro.xacro
ur_moveit_config/config/: controllers.yaml  pilz_cartesian_limits.yaml  pilz_industrial_motion_planner_planning.yaml
ur_moveit_config/launch/: ur_moveit.launch.py  ur_pilz.launch.py
ur_moveit_config/rviz/: view_robot.rviz
vitals/: CMakeLists.txt  package.xml
vitals/launch/: vital_monitor.launch.py
vitals/msg/: EndEffectorVelocity.msg
vitals/src/: end_effector_velocity_publisher.cpp  get_jacobian.cpp
